--- a/config/project.yml
+++ b/config/project.yml
@@ -1,9 +1,9 @@
 ---
-  project_name: "TODO Add a project_name to project.yml, like Orthoptera Species File"
-  project_citation: "TODO Add a citation to project.yml."
-  project_authors: "TODO Add list of project authors, like 'DeWalt RE, Maehr MD, Hopkins H, Neu-Becker U, and Stueber G.'"
-  project_url: "TODO Add an URL to project.yml like 'https://orthoptera.speciesfile.org'."
-  project_old_url: "TODO Add an old project URL to project.yml like 'https://orthoptera.archive.speciesfile.org'." 
-  focal_taxon: "TODO Add a focal taxon name to project.yml, lowercase, like plecoptera."
-  focal_taxon_common_name: "TODO Add a focal taxon common name to project.yml"
-  contact_email: "TODO: Add a contact email to project.yml"
+  project_name: "Coleorryncha Species File"
+  project_citation: "Sam W. Heads, Heidi Hopkins & Michael D. Maehr. Coleorrhyncha Species File. Version 5.0/5.0. [retrieval date]. <http://Coleorrhyncha.SpeciesFile.org>"
+  project_authors: "Heads, S.W., Hopkins, H. & Maehr, M.D."
+  project_url: "https://coleorryhncha.speciesfile.org"
+  project_old_url: "https://coleorryhncha.archive.speciesfile.org" 
+  focal_taxon: "coleorryncha"
+  focal_taxon_common_name: "moss bugs"
+  contact_email: "cockroachdoc@gmail.com"
