--- a/config/header.yml
+++ b/config/header.yml
@@ -1,6 +1,6 @@
 ---
-  header_logo_url:
-  header_logo_text: My project
+  header_logo_url:  http://Coeorrhyncha.archive.speciesfile.org/HomePage/Coleorrhyncha/img_Logo/SiteLogo.jpg
+  header_logo_text: Coleorrhyncha Species File
   header_links:
     - label: Home
       link: /
