--- a/config/project.yml
+++ b/config/project.yml
@@ -1,6 +1,6 @@
 ---
   project_name: "Coleorryncha Species File"
-  project_citation: "Sam W. Heads, Heidi Hopkins & Michael D. Maehr. Coleorrhyncha Species File. Version 5.0/5.0. [retrieval date]. <http://Coleorrhyncha.SpeciesFile.org>"
+  project_citation: "Coleorrhyncha Species File"
   project_authors: "Heads, S.W., Hopkins, H. & Maehr, M.D."
   project_url: "https://coleorryhncha.speciesfile.org"
   project_old_url: "https://coleorryhncha.archive.speciesfile.org" 
