--- a/config/project.yml
+++ b/config/project.yml
@@ -1,7 +1,7 @@
 ---
   project_name: "Coleorryncha Species File"
   project_citation: "Coleorrhyncha Species File"
-  project_authors: "Heads, S.W., Hopkins, H. & Maehr, M.D."
+  project_authors: "Heads, S.W &, Hopkins, H."
   project_url: "https://coleorryhncha.speciesfile.org"
   project_old_url: "https://coleorryhncha.archive.speciesfile.org" 
   focal_taxon: "coleorryncha"
