--- a/config/header.yml
+++ b/config/header.yml
@@ -1,5 +1,5 @@
 ---
-  header_logo_url:  http://Coeorrhyncha.archive.speciesfile.org/HomePage/Coleorrhyncha/img_Logo/SiteLogo.jpg
+  header_logo_url:  https://sfg.taxonworks.org/s/e6g4cf
   header_logo_text: Coleorrhyncha Species File
   header_links:
     - label: Home
