--- a/config/api.yml
+++ b/config/api.yml
@@ -1,3 +1,3 @@
 ---
-  url: https://sfg-practice.taxonworks.org/api/v1
-  project_token: OTd6I7hTw-Iz5hJVCpJcZA
+  url: https://sfg.taxonworks.org/api/v1
+  project_token: L0sAnBlkVb53ZBbfP-ljzQ
