--- a/config/project.yml
+++ b/config/project.yml
@@ -2,8 +2,8 @@
   project_name: "Coleorryncha Species File"
   project_citation: "Coleorrhyncha Species File"
   project_authors: "Hopkins, H."
-  project_url: "https://coleorryhncha.speciesfile.org"
-  project_old_url: "https://coleorryhncha.archive.speciesfile.org" 
+  project_url: "https://coleorrhyncha.speciesfile.org"
+  project_old_url: "https://coleorrhyncha.archive.speciesfile.org" 
   focal_taxon: "coleorryncha"
   focal_taxon_common_name: "moss bugs"
   contact_email: "cockroachdoc@gmail.com"
