Update project.yml (Ref #2)

--- a/config/project.yml
+++ b/config/project.yml
@@ -4,6 +4,6 @@
   project_authors: "Hopkins, H."
   project_url: "https://coleorrhyncha.speciesfile.org"
   project_old_url: "https://coleorrhyncha.archive.speciesfile.org" 
-  focal_taxon: "coleorryncha"
+  focal_taxon: "coleorrhyncha"
   focal_taxon_common_name: "moss bugs"
   contact_email: "cockroachdoc@gmail.com"
