Update project.yml (Ref #2)

--- a/config/project.yml
+++ b/config/project.yml
@@ -3,7 +3,7 @@
   project_citation: "Coleorrhyncha Species File"
   project_authors: "Hopkins, H."
   project_url: "https://coleorrhyncha.speciesfile.org"
-  project_old_url: "https://coleorrhyncha.archive.speciesfile.org" 
+  project_old_url: "http://coleorrhyncha.archive.speciesfile.org" 
   focal_taxon: "coleorrhyncha"
   focal_taxon_common_name: "moss bugs"
   contact_email: "cockroachdoc@gmail.com"
